third: added board array and ships

--- a/battle.html
+++ b/battle.html
@@ -13,8 +13,11 @@
   <h1>Battleship</h1>
 </header>
   <body>
-<main>
-  <table id="battleTable"></table>
-</main>
+    <main>
+      <table id="battleTable"></table>
+    </main>
+    <section>
+      Torpedos remaining: 25 
+    </section>
   </body>
 </html>
