added shipPositions array and wip button

--- a/battle.html
+++ b/battle.html
@@ -17,7 +17,10 @@
       <table id="battleTable"></table>
     </main>
     <section>
-      Torpedos remaining: 25 
+      Torpedos remaining: 25
     </section>
+    <div class="button">
+      <button type="button" name="button">Reveal Ships</button>
+    </div>
   </body>
 </html>
