added diagonal limitations and styling

--- a/battle.html
+++ b/battle.html
@@ -7,10 +7,11 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
     <script src="battle.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Jura:400,600" rel="stylesheet">
     <title>LEARN to Play Battleship</title>
   </head>
 <header>
-  <h1>Battleship</h1>
+  <h1>BATTLESHIP</h1>
 </header>
   <body>
     <main>
@@ -19,8 +20,5 @@
     <section>
       Torpedos remaining: 25
     </section>
-    <div class="button">
-      <button type="button" name="button">Reveal Ships</button>
-    </div>
   </body>
 </html>
