added new CSS features

--- a/battle.html
+++ b/battle.html
@@ -8,6 +8,7 @@
     crossorigin="anonymous"></script>
     <script src="battle.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Jura:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
     <title>LEARN to Play Battleship</title>
   </head>
 <header>
